unpackaged/main/default/objects/ServiceAppointment/fields/Incompletion_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Incompletion_Reason_Code__c</fullName>
    <label>Incompletion Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client: Cancelled Work - Inside 24 Hrs Notice</fullName>
            </value>
            <value>
                <fullName>Client: Cancelled Work - Inside 4 hrs Notice</fullName>
            </value>
            <value>
                <fullName>Client: Cancelled Work - Outside 24 Hrs Notice</fullName>
            </value>
            <value>
                <fullName>Client: Duplicate Work Order</fullName>
            </value>
            <value>
                <fullName>Client: No Access - Confined Spaces</fullName>
            </value>
            <value>
                <fullName>Client: No Access - Customer Site Not Ready</fullName>
            </value>
            <value>
                <fullName>Client: No Access - Premise Inaccessible</fullName>
            </value>
            <value>
                <fullName>Client: No Access - Unsafe Work Location</fullName>
            </value>
            <value>
                <fullName>Client: Non-Doable Work - Part Supply Inaccuracy</fullName>
            </value>
            <value>
                <fullName>Client: Non-Doable Work - SOW Inaccuracy</fullName>
            </value>
            <value>
                <fullName>Client: Non-Doable Work - Tool Supply Inaccuracy</fullName>
            </value>
            <value>
                <fullName>Client: Rescheduled Time - Inside 24 Hrs Notice</fullName>
            </value>
            <value>
                <fullName>Client: Rescheduled Time - Inside 4 hrs Notice</fullName>
            </value>
            <value>
                <fullName>Client: Rescheduled Time - Outside 24 Hrs Notice</fullName>
            </value>
            <value>
                <fullName>Client/LTS: Cancelled As Previous Job Running Late</fullName>
            </value>
            <value>
                <fullName>LTS: Customer cancelled - resource not available</fullName>
            </value>
            <value>
                <fullName>LTS: Inclement Weather</fullName>
            </value>
            <value>
                <fullName>LTS: Incorrectly Built Work Order</fullName>
            </value>
            <value>
                <fullName>LTS: Job completed prior to this request</fullName>
            </value>
            <value>
                <fullName>LTS: Non-Doable Work - Part Supply Inaccuracy</fullName>
            </value>
            <value>
                <fullName>LTS: Non-Doable Work - Tool Supply Inaccuracy</fullName>
            </value>
            <value>
                <fullName>LTS: Sequence Not Needed - SLA Change</fullName>
            </value>
            <value>
                <fullName>LTS: Task Sequence Not Needed</fullName>
            </value>
            <value>
                <fullName>LTS: Unavailable Technician</fullName>
            </value>
            <value>
                <fullName>Client: Cancelled - Given To Other Vendor</fullName>
                <isActive>false</isActive>
                <label>Client: Cancelled - Given To Other Vendor</label>
            </value>
            <value>
                <fullName>Client: Cancelled Over 24hrs - Tech Confirmation Was Not Sent Same Day</fullName>
                <isActive>false</isActive>
                <label>Client: Cancelled Over 24hrs - Tech Confirmation Was Not Sent Same Day</label>
            </value>
            <value>
                <fullName>Client: Cancelled Over 24hrs - Unavailable Resource On Date Requested</fullName>
                <isActive>false</isActive>
                <label>Client: Cancelled Over 24hrs - Unavailable Resource On Date Requested</label>
            </value>
            <value>
                <fullName>Client: Cancelled Under 24hrs - Tech Confirmation Was Not Sent Same Day</fullName>
                <isActive>false</isActive>
                <label>Client: Cancelled Under 24hrs - Tech Confirmation Was Not Sent Same Day</label>
            </value>
            <value>
                <fullName>Client: Cancelled Under 24hrs - Unavailable Resource On Date Requested</fullName>
                <isActive>false</isActive>
                <label>Client: Cancelled Under 24hrs - Unavailable Resource On Date Requested</label>
            </value>
            <value>
                <fullName>Client: Cancelled Under 4hrs - Tech Confirmation Was Not Sent Same Day</fullName>
                <isActive>false</isActive>
                <label>Client: Cancelled Under 4hrs - Tech Confirmation Was Not Sent Same Day</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>