unpackaged/main/default/objects/ServiceAppointment/fields/Information01__c.field-meta.xml
<CustomField>
    <fullName>Information01__c</fullName>
    <label>Information01</label>
    <length>64</length>
    <type>Text</type>
</CustomField>