unpackaged/main/default/objects/ServiceAppointment/fields/Information02__c.field-meta.xml
<CustomField>
    <fullName>Information02__c</fullName>
    <label>Information02</label>
    <length>64</length>
    <type>Text</type>
</CustomField>