unpackaged/main/default/objects/ServiceAppointment/fields/Information02Int__c.field-meta.xml
<CustomField>
    <fullName>Information02Int__c</fullName>
    <label>CCN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>