unpackaged/main/default/objects/ServiceAppointment/fields/Initial_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Request_Date__c</fullName>
    <label>Initial Request Date</label>
    <type>DateTime</type>
</CustomField>