unpackaged/main/default/objects/ServiceAppointment/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <label>Internal Comments</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>