unpackaged/main/default/objects/ServiceAppointment/fields/Is_Falcon__c.field-meta.xml
<CustomField>
    <fullName>Is_Falcon__c</fullName>
    <formula>IF(
				 Sub_Customer__r.Falcon__c = True,
			  True,
				 False
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Falcon</label>
    <type>Checkbox</type>
</CustomField>