unpackaged/main/default/objects/ServiceAppointment/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <label>Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Issue</fullName>
            </value>
            <value>
                <fullName>Lack of Resources</fullName>
            </value>
            <value>
                <fullName>LOC Issue</fullName>
            </value>
            <value>
                <fullName>Manager Delay</fullName>
            </value>
            <value>
                <fullName>Multiple MTTRs in Market</fullName>
            </value>
            <value>
                <fullName>On-Call Tech Delay</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rescheduling Other Work</fullName>
            </value>
            <value>
                <fullName>System Issue</fullName>
            </value>
            <value>
                <fullName>Ticket Reassigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>