unpackaged/main/default/objects/ServiceAppointment/fields/Jap_Comment__c.field-meta.xml
<CustomField>
    <fullName>Jap_Comment__c</fullName>
    <label>Jep Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>