unpackaged/main/default/objects/ServiceAppointment/fields/Jeopardy_flow_runtime__c.field-meta.xml
<CustomField>
    <fullName>Jeopardy_flow_runtime__c</fullName>
    <label>Jeopardy flow runtime</label>
    <type>DateTime</type>
</CustomField>