unpackaged/main/default/objects/ServiceAppointment/fields/Jep_Flag__c.field-meta.xml
<CustomField>
    <fullName>Jep_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jep Flag</label>
    <type>Checkbox</type>
</CustomField>