unpackaged/main/default/objects/ServiceAppointment/fields/Jep_Reason__c.field-meta.xml
<CustomField>
    <fullName>Jep_Reason__c</fullName>
    <label>Jep Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Late to Arrive</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>