unpackaged/main/default/objects/ServiceAppointment/fields/JSR_CDL_Mobile__c.field-meta.xml
<CustomField>
    <fullName>JSR_CDL_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Made true in Service Appointment - Ticket History mobile flow. Triggers async flow to relate JSR Content Document Links.</description>
    <label>JSR CDL Mobile</label>
    <type>Checkbox</type>
</CustomField>