unpackaged/main/default/objects/ServiceAppointment/fields/Local_DueDate__c.field-meta.xml
<CustomField>
    <fullName>Local_DueDate__c</fullName>
    <description>Show local Due Date based on Service Territory</description>
    <formula>DATE(VALUE(LEFT(TZDD__c ,4)),VALUE(MID(TZDD__c ,6,02)),VALUE(MID(TZDD__c ,9,02)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Show local Due Date based on Service Territory</inlineHelpText>
    <label>Local DueDate</label>
    <type>Date</type>
</CustomField>