unpackaged/main/default/objects/ServiceAppointment/fields/LocalArrivalEnd__c.field-meta.xml
<CustomField>
    <fullName>LocalArrivalEnd__c</fullName>
    <description>Formula to display date/time as &quot;MM/DD/YYYY HH:MM&quot;</description>
    <formula>MID(TZAE__c,6,2)&amp;&quot;/&quot;&amp;MID(TZAE__c,9,2)&amp;&quot;/&quot;&amp;MID(TZAE__c,1,4)&amp;&quot; &quot;&amp;MID(TZAE__c,12,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Local date/time based on Service Appointment time zone</inlineHelpText>
    <label>Local Arrival End</label>
    <type>Text</type>
</CustomField>