unpackaged/main/default/objects/ServiceAppointment/fields/LocalScheduledStart__c.field-meta.xml
<CustomField>
    <fullName>LocalScheduledStart__c</fullName>
    <description>Formula to display date/time as &quot;MM/DD/YYYY HH:MM&quot;</description>
    <formula>MID(TZSS__c,6,2)&amp;&quot;/&quot;&amp;MID(TZSS__c,9,2)&amp;&quot;/&quot;&amp;MID(TZSS__c,1,4)&amp;&quot; &quot;&amp;MID(TZSS__c,12,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Local date/time based on Service Appointment time zone</inlineHelpText>
    <label>Local Scheduled Start</label>
    <type>Text</type>
</CustomField>