unpackaged/main/default/objects/ServiceAppointment/fields/MTTR_Late_to_be_On_Site__c.field-meta.xml
<CustomField>
    <fullName>MTTR_Late_to_be_On_Site__c</fullName>
    <formula>Is_Falcon__c =false
&amp;&amp;
ArrivalWindowEndTime &gt;= NOW()
	&amp;&amp;
	ArrivalWindowEndTime &lt;= (NOW()+0.5/24)
	&amp;&amp;
	(ISPICKVAL(Status, &quot;Enroute&quot;) || ISPICKVAL(Status, &quot;Accepted&quot;) || ISPICKVAL(Status, &quot;Dispatched&quot;))
	&amp;&amp;
	(SLA_Name__c = &quot;4hr&quot; || SLA_Name__c = &quot;8hr&quot; || SLA_Name__c = &quot;2hr Repair&quot; || SLA_Name__c = &quot;CBUD E After Hours&quot; || SLA_Name__c = &quot;2hr&quot; || SLA_Name__c = &quot;3hr&quot; || SLA_Name__c = &quot;CBUD E&quot; || SLA_Name__c = &quot;6hr&quot; || SLA_Name__c = &quot;5 Business Hours&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MTTR Late to be On Site</label>
    <type>Checkbox</type>
</CustomField>