unpackaged/main/default/objects/ServiceAppointment/fields/No_Consumables_Used__c.field-meta.xml
<CustomField>
    <fullName>No_Consumables_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Consumables Used</label>
    <type>Checkbox</type>
</CustomField>