unpackaged/main/default/objects/ServiceAppointment/fields/No_Consumables_Used_Reason__c.field-meta.xml
<CustomField>
    <fullName>No_Consumables_Used_Reason__c</fullName>
    <label>No Consumables Used Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Site Survey</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Vendor Escort</fullName>
            </value>
            <value>
                <fullName>PMR</fullName>
            </value>
            <value>
                <fullName>Part Pickup</fullName>
            </value>
            <value>
                <fullName>Job Canceled</fullName>
            </value>
            <value>
                <fullName>No Tolls, Parking or Consumables required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>