unpackaged/main/default/objects/ServiceAppointment/fields/Non_MTTR_About_to_Miss_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Non_MTTR_About_to_Miss_Appointment__c</fullName>
    <formula>Is_Falcon__c =false
&amp;&amp;
ArrivalWindowStartTime &gt;= NOW()-2/24
	&amp;&amp;
	ArrivalWindowStartTime &lt;= Now()+1/24
	&amp;&amp;
	(ISPICKVAL(Status, &quot;Open&quot;)||ISPICKVAL(Status, &quot;Rejected&quot;))
	&amp;&amp;
(SLA_Name__c = &quot;CBUD CB&quot; || SLA_Name__c = &quot;Best Effort&quot; || SLA_Name__c = &quot;Sched&quot; || SLA_Name__c = &quot;2BD&quot; || SLA_Name__c = &quot;CompB&quot; || SLA_Name__c = &quot;ZZ DO NOT USE Over 48 Hours&quot; || SLA_Name__c = &quot;NBD&quot; 
	|| SLA_Name__c = &quot;ZZ DO NOT USE 24 to 48 Hours&quot; || SLA_Name__c = &quot;Sched Short Notice AH Under 24 hrs&quot; || SLA_Name__c = &quot;Sched Short Notive AH 24 to 48 hrs&quot; || SLA_Name__c = &quot;(none)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non MTTR About to Miss Appointment</label>
    <type>Checkbox</type>
</CustomField>