unpackaged/main/default/objects/ServiceAppointment/fields/Off_Site_by__c.field-meta.xml
<CustomField>
    <fullName>Off_Site_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Off-Site by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments5</relationshipName>
    <type>Lookup</type>
</CustomField>