unpackaged/main/default/objects/ServiceAppointment/fields/Off_Site_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Off_Site_Time_Stamp__c</fullName>
    <label>Off Site Time Stamp</label>
    <type>DateTime</type>
</CustomField>