unpackaged/main/default/objects/ServiceAppointment/fields/On_Site_by__c.field-meta.xml
<CustomField>
    <fullName>On_Site_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On-Site by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments6</relationshipName>
    <type>Lookup</type>
</CustomField>