unpackaged/main/default/objects/ServiceAppointment/fields/On_Site_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Time_Stamp__c</fullName>
    <label>On Site Time Stamp</label>
    <type>DateTime</type>
</CustomField>