unpackaged/main/default/objects/ServiceAppointment/fields/Original_End__c.field-meta.xml
<CustomField>
    <fullName>Original_End__c</fullName>
    <label>Original End</label>
    <type>DateTime</type>
</CustomField>