unpackaged/main/default/objects/ServiceAppointment/fields/Original_Start__c.field-meta.xml
<CustomField>
    <fullName>Original_Start__c</fullName>
    <label>Original Start</label>
    <type>DateTime</type>
</CustomField>