unpackaged/main/default/objects/ServiceAppointment/fields/Outage_Type__c.field-meta.xml
<CustomField>
    <fullName>Outage_Type__c</fullName>
    <label>Outage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipment Outage</fullName>
            </value>
            <value>
                <fullName>Fiber Outage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>