unpackaged/main/default/objects/ServiceAppointment/fields/Parts_Added__c.field-meta.xml
<CustomField>
    <fullName>Parts_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parts Added</label>
    <type>Checkbox</type>
</CustomField>