unpackaged/main/default/objects/ServiceAppointment/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technician_Refusal</fullName>
                <label>Technician Refusal</label>
            </value>
            <value>
                <fullName>Dispatcher Refusal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>