unpackaged/main/default/objects/ServiceAppointment/fields/Request_Arrival_End__c.field-meta.xml
<CustomField>
    <fullName>Request_Arrival_End__c</fullName>
    <description>Date/time based on Service Appointment requested time zone</description>
    <inlineHelpText>Date/time based on Service Appointment requested time zone</inlineHelpText>
    <label>Request Arrival End</label>
    <type>DateTime</type>
</CustomField>