unpackaged/main/default/objects/ServiceAppointment/fields/Request_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Due_Date__c</fullName>
    <description>Date/time based on Service Appointment requested time zone</description>
    <inlineHelpText>Date/time based on Service Appointment requested time zone</inlineHelpText>
    <label>Request Due Date</label>
    <type>DateTime</type>
</CustomField>