unpackaged/main/default/objects/ServiceAppointment/fields/Request_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Request_Time_Zone__c</fullName>
    <inlineHelpText>Select the time zone requested by the client.</inlineHelpText>
    <label>Request Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hawaiian Time</fullName>
            </value>
            <value>
                <fullName>Alaska Time</fullName>
            </value>
            <value>
                <fullName>Pacific Time</fullName>
            </value>
            <value>
                <fullName>Arizona Time</fullName>
            </value>
            <value>
                <fullName>Mountain Time</fullName>
            </value>
            <value>
                <fullName>Saskatchewan Time</fullName>
            </value>
            <value>
                <fullName>Central Time</fullName>
            </value>
            <value>
                <fullName>Eastern Time</fullName>
            </value>
            <value>
                <fullName>Atlantic Time</fullName>
            </value>
            <value>
                <fullName>Newfoundland Time</fullName>
            </value>
            <value>
                <fullName>GMT/UTC</fullName>
            </value>
            <value>
                <fullName>Alaska Standard Time</fullName>
                <isActive>false</isActive>
                <label>Alaska Standard Time</label>
            </value>
            <value>
                <fullName>Atlantic Standard Time</fullName>
                <isActive>false</isActive>
                <label>Atlantic Standard Time</label>
            </value>
            <value>
                <fullName>Eastern Standard Time</fullName>
                <isActive>false</isActive>
                <label>Eastern Standard Time</label>
            </value>
            <value>
                <fullName>Newfoundland Standard Time</fullName>
                <isActive>false</isActive>
                <label>Newfoundland Standard Time</label>
            </value>
            <value>
                <fullName>Pacific Standard Time</fullName>
                <isActive>false</isActive>
                <label>Pacific Standard Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>