unpackaged/main/default/objects/ServiceAppointment/fields/Resolution_Code__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Code__c</fullName>
    <label>Resolution Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Managerial Escalation Needed</fullName>
            </value>
            <value>
                <fullName>Resource Brought From Out Of Territory</fullName>
            </value>
            <value>
                <fullName>Prioritized Over Another Customer</fullName>
            </value>
            <value>
                <fullName>Managerial Escalation Needed</fullName>
            </value>
            <value>
                <fullName>Director Escalation Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>