unpackaged/main/default/objects/ServiceAppointment/fields/Safety__c.field-meta.xml
<CustomField>
    <fullName>Safety__c</fullName>
    <formula>ISBLANK(Safety_Check__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safety</label>
    <type>Checkbox</type>
</CustomField>