unpackaged/main/default/objects/ServiceAppointment/fields/Safety_Check__c.field-meta.xml
<CustomField>
    <fullName>Safety_Check__c</fullName>
    <label>Safety Check</label>
    <length>64</length>
    <type>Text</type>
</CustomField>