unpackaged/main/default/objects/ServiceAppointment/fields/Safety_delete__c.field-meta.xml
<CustomField>
    <fullName>Safety_delete__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Safety (delete)</label>
    <type>Checkbox</type>
</CustomField>