unpackaged/main/default/objects/ServiceAppointment/fields/Schedule_Automatically__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Automatically__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Schedule Automatically</label>
    <type>Checkbox</type>
</CustomField>