unpackaged/main/default/objects/ServiceAppointment/fields/Service_Appointment_Identity__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Identity__c</fullName>
    <label>Service Appointment Identity</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>