unpackaged/main/default/objects/ServiceAppointment/fields/Service_Appointment_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Integration_ID__c</fullName>
    <label>Service Appointment Integration ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>